--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 anyio==3.6.2
 appnope==0.1.3
+arch==5.3.1
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
@@ -39,9 +40,11 @@ jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.5
 kiwisolver==1.4.4
+markdown-it-py==2.1.0
 MarkupSafe==2.1.2
 matplotlib==3.6.3
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 mistune==2.0.5
 nbclassic==0.5.1
 nbclient==0.7.2
@@ -62,6 +65,7 @@ Pillow==9.4.0
 platformdirs==3.0.0
 prometheus-client==0.16.0
 prompt-toolkit==3.0.36
+property-cached==1.6.4
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -78,6 +82,7 @@ qtconsole==5.4.0
 QtPy==2.3.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.3.1
 scipy==1.10.0
 seaborn==0.12.2
 Send2Trash==1.8.0
